further "fun" with the sim

--- a/C3/main.ipynb
+++ b/C3/main.ipynb
@@ -268,7 +268,6 @@
    ],
    "source": [
     "plt.figure()\n",
-    "plt.tight_layout(pad=3)\n",
     "levels = np.linspace(w.min(), w.max(), 50)\n",
     "\n",
     "def contourp(loc:int, compId:str):\n",
@@ -293,6 +292,41 @@
     "plt.xticks(x_, [\"m1u\",\"m1l\",\"m2u\",\"m2l\", \"m3u\", \"m3l\", \n",
     "                           \"m4u\", \"m4l\", \"lg\", \"hn\"], rotation=60)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dfef33c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17479.999999999993 17480\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[24]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      4\u001b[39m         mass += conn.protocol\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(mass, BAT_MASS_1WING)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m mass==BAT_MASS_1WING\n",
+      "\u001b[31mAssertionError\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "mass = 0\n",
+    "for conn in mesh.connections[\"mass\"]:\n",
+    "    if conn.eleid == \"bt\":\n",
+    "        mass += conn.protocol\n",
+    "\n",
+    "print(mass, BAT_MASS_1WING)\n",
+    "assert np.isclose(mass, BAT_MASS_1WING)"
    ]
   }
  ],
