TE and LE equipment

--- a/C3/main.ipynb
+++ b/C3/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "c101f1e2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "9b40ea3a",
    "metadata": {},
    "outputs": [],
@@ -73,6 +73,8 @@
     "motormass = 1000\n",
     "lgmass = 5000\n",
     "hingemass = 500\n",
+    "lemass = 1000\n",
+    "temass = 3000\n",
     "# motmountwidth = 0.7 #width of the motor mount along y\n",
     "\n",
     "#loads\n",
@@ -96,7 +98,7 @@
     "mount = \"mm\"\n",
     "\n",
     "#geometry loading\n",
-    "pts, ids = mc.all_components(mesh, up, nb, na, nf2, nipCoeff, ntrig, dz, din, cspacing, bspacing, BAT_MASS_1WING,\n",
+    "pts, ids = mc.all_components(mesh, up, nb, na, nf2, nipCoeff, ntrig, dz, din, cspacing, bspacing, BAT_MASS_1WING, lemass, temass,\n",
     "                             spar, panelPlate, panelRib, panelFlange, skin, batteryRail, battery, motor, lg, hinge, mount)\n",
     "\n",
     "#element definitions\n",
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "id": "13c2671c",
    "metadata": {},
    "outputs": [],
@@ -227,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "id": "5d92afeb",
    "metadata": {},
    "outputs": [],
@@ -295,12 +297,10 @@
     "\n",
     "#TODO: reformat as 9x9, with rails, batteries and LE, TE mass distrs.\n",
     "plt.subplot(337)\n",
-    "labels = [f\"cell{i}\" for i in range(1, 2*ntrig+2)]\n",
     "for batids in ids[\"bats\"]:\n",
     "    x_ = [mesh.nodes[id_].y for id_ in batids]\n",
     "    y_ = [w[id_] for id_ in batids]\n",
-    "    plt.plot(x_, y_, label=labels.pop(0))\n",
-    "plt.legend()\n",
+    "    plt.plot(x_, y_)\n",
     "plt.subplot(338)\n",
     "labels = [f\"cell{i}\" for i in range(1, 2*ntrig+2)]\n",
     "for beamids in ids[\"rails\"]:\n",
@@ -308,7 +308,19 @@
     "    y_ = [w[id_] for id_ in beamids]\n",
     "    plt.plot(x_, y_, label=labels.pop(0))\n",
     "plt.legend()\n",
+    "plt.subplot(339)\n",
+    "first=True\n",
+    "for i in range(ids[\"spars\"][:, :nf2].shape(1)):\n",
+    "    plt.plot(x[ids[\"spars\"][:, i]], w[ids[\"spars\"][:, i]], color=\"blue\", label=\"frontFlange\") if first else plt.plot(x[ids[\"spars\"][:, i]], w[ids[\"spars\"][:, i]], color=\"blue\")\n",
+    "    fist = False\n",
+    "first=True\n",
+    "for i in range(ids[\"spars\"][:, -nf2:].shape(1)):\n",
+    "    plt.plot(x[ids[\"spars\"][:, i]], w[ids[\"spars\"][:, i]], color=\"orange\", label=\"frontFlange\") if first else plt.plot(x[ids[\"spars\"][:, i]], w[ids[\"spars\"][:, i]], color=\"blue\")\n",
+    "    fist = False\n",
     "\n",
+    "plt.plot(x[ids[\"LE\"]], w[ids[\"LE\"]], label=\"LEeqpt\")\n",
+    "plt.plot(x[ids[\"TE\"]], w[ids[\"TE\"]], label=\"TEeqpt\")\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
   },
