--- a/C3/main.ipynb
+++ b/C3/main.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "id": "13c2671c",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,12 @@
     "\n",
     "#applying weight\n",
     "weight = p3g.weight(M, n*G0, N, pf3.DOF, gcl.Direction3D(0,0,-1))\n",
-    "f+=weight"
+    "f+=weight\n",
+    "\n",
+    "#TODO: Remove this, this is only to check the mopment hypothesis\n",
+    "f[3::pf3.DOF] = 0\n",
+    "f[4::pf3.DOF] = 0\n",
+    "f[5::pf3.DOF] = 0"
    ]
   },
   {
@@ -230,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "5d92afeb",
    "metadata": {},
    "outputs": [],
