--- a/C3/main.ipynb
+++ b/C3/main.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "9b40ea3a",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
     "mesh = gcl.Mesh3D()\n",
     "\n",
     "#mesh settings\n",
-    "nbCoeff = 1\n",
+    "nbCoeff = 3\n",
     "na = 7\n",
     "nf2 = 3\n",
     "ntrig = 2\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "13c2671c",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5d92afeb",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
    "id": "d11a8d66",
    "metadata": {},
    "source": [
-    "Plots"
+    "# **Plots**"
    ]
   },
   {
@@ -501,6 +501,159 @@
     "plt.contourf(xtmesh, ytmesh, clt, levels=np.linspace(clt.min(), clt.max(), 100))\n",
     "plt.colorbar()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92032bb4",
+   "metadata": {},
+   "source": [
+    "# Pyvista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "616e0341",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyvista\n",
+    "pyvista.set_plot_theme('document')\n",
+    "pyvista.set_jupyter_backend('trame')\n",
+    "pyvista.global_theme.window_size = [600, 400]\n",
+    "pyvista.global_theme.axes.show = True\n",
+    "pyvista.global_theme.anti_aliasing = 'fxaa'\n",
+    "pyvista.global_theme.show_scalar_bar = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "01ae922b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "519a6fc87047432cbe1732dbb8456047",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:57714/index.html?ui=P_0x23dac130860_4&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pyvista as pv\n",
+    "#nodes is our ncoords\n",
+    "elements = outdict[\"elements\"]\n",
+    "nid_pos = outdict[\"nid_pos\"]\n",
+    "\n",
+    "'''handling each element separately at each elemnt type gets a diff colour'''\n",
+    "#springs\n",
+    "edges_s = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    edges_s.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_s = [1]*len(edges_s)\n",
+    "#beams\n",
+    "edges_b = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    edges_b.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_b = [2]*len(edges_s)\n",
+    "#quads\n",
+    "edges_q = list()\n",
+    "for s in elements[\"quad\"]:\n",
+    "    edges_q.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "    edges_q.append([nid_pos[s.n2], nid_pos[s.n3]])\n",
+    "    edges_q.append([nid_pos[s.n3], nid_pos[s.n4]])\n",
+    "    edges_q.append([nid_pos[s.n4], nid_pos[s.n1]])\n",
+    "colors_q = [3]*len(edges_q)\n",
+    "\n",
+    "edges = np.array(edges_s+edges_b+edges_q)\n",
+    "colors = np.array(colors_s+colors_b+colors_q)\n",
+    "\n",
+    "# We must \"pad\" the edges to indicate to vtk how many points per edge\n",
+    "padding = np.empty(edges.shape[0], int) * 2\n",
+    "padding[:] = 2\n",
+    "edges_w_padding = np.vstack((padding, edges.T)).T\n",
+    "\n",
+    "mesh = pyvista.PolyData(outdict[\"ncoords\"], edges_w_padding)\n",
+    "\n",
+    "mesh.plot(\n",
+    "    scalars=colors,\n",
+    "    render_lines_as_tubes=True,\n",
+    "    style='wireframe',\n",
+    "    line_width=1,\n",
+    "    cmap='jet',\n",
+    "    show_scalar_bar=False,\n",
+    "    background='w',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cbd7a4d",
+   "metadata": {},
+   "source": [
+    "## Regional Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef904465",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nodes is our ncoords\n",
+    "elements = outdict[\"elements\"]\n",
+    "nid_pos = outdict[\"nid_pos\"]\n",
+    "\n",
+    "'''handling each element separately at each elemnt type gets a diff colour'''\n",
+    "#springs\n",
+    "edges_s = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    #if z[nid_pos[s.n1]]<\n",
+    "    edges_s.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_s = [\"blue\"]*len(edges_s)\n",
+    "#beams\n",
+    "edges_b = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    edges_b.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_b = [\"orange\"]*len(edges_s)\n",
+    "#quads\n",
+    "edges_q = list()\n",
+    "for s in elements[\"quad\"]:\n",
+    "    edges_q.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "    edges_q.append([nid_pos[s.n2], nid_pos[s.n3]])\n",
+    "    edges_q.append([nid_pos[s.n3], nid_pos[s.n4]])\n",
+    "    edges_q.append([nid_pos[s.n4], nid_pos[s.n1]])\n",
+    "colors_q = [\"gray\"]*len(edges_q)\n",
+    "\n",
+    "edges = np.array(edges_s+edges_b+edges_q)\n",
+    "colors = np.array(colors_s+colors_b+colors_q)\n",
+    "\n",
+    "# We must \"pad\" the edges to indicate to vtk how many points per edge\n",
+    "padding = np.empty(edges.shape[0], int) * 2\n",
+    "padding[:] = 2\n",
+    "edges_w_padding = np.vstack((padding, edges.T)).T\n",
+    "\n",
+    "mesh = pyvista.PolyData(outdict[\"ncoords\"], edges_w_padding)\n",
+    "\n",
+    "mesh.plot(\n",
+    "    scalars=colors,\n",
+    "    render_lines_as_tubes=True,\n",
+    "    style='wireframe',\n",
+    "    line_width=1,\n",
+    "    cmap='jet',\n",
+    "    show_scalar_bar=False,\n",
+    "    background='w',\n",
+    ")"
    ]
   }
  ],
