--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "27e1a559",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c28c8f87",
    "metadata": {},
    "outputs": [],
@@ -101,9 +101,9 @@
     "#geometry loading\n",
     "nb = int(np.ceil(nbCoeff*4*((up.tfb.y-up.ffb.y)/bspacing+1)))\n",
     "\n",
-    "sparsh, sparigrd, sparSecIdxs, a1, a2, f = mc.trigspars(mesh, nb, na, nf2, ntrig, spar, up.ffb, up.frb, up.frt, up.fft, up.tfb, up.trb, up.trt, up.tft)\n",
+    "sparsh, sparigrd, sparSecIdxs, a1, a2, f2 = mc.trigspars(mesh, nb, na, nf2, ntrig, spar, up.ffb, up.frb, up.frt, up.fft, up.tfb, up.trb, up.trt, up.tft)\n",
     "\n",
-    "nip = int(np.ceil(nipCoeff*(4*((a1+2*f)/cspacing+1)))) #obtaining nip so that we get the minimal required amount of elements\n",
+    "nip = int(np.ceil(nipCoeff*(4*((a1+2*f2)/cspacing+1)))) #obtaining nip so that we get the minimal required amount of elements\n",
     "\n",
     "#element definitions\n",
     "#1) thicknesses\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7ef37850",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,11 @@
     "L, Mx, My = lm.apply_on_wingbox(xmesh.T, ymesh.T, (0,1), (0,1))\n",
     "f[2::pf3.DOF][sparigrd[:, sparSecIdxs[1]:sparSecIdxs[-2]+1].flatten()] = Ltot*L.T.flatten()\n",
     "f[3::pf3.DOF][sparigrd[:, sparSecIdxs[1]:sparSecIdxs[-2]+1].flatten()] = Ltot*Mx.T.flatten()\n",
-    "f[4::pf3.DOF][sparigrd[:, sparSecIdxs[1]:sparSecIdxs[-2]+1].flatten()] = Ltot*My.T.flatten()"
+    "f[4::pf3.DOF][sparigrd[:, sparSecIdxs[1]:sparSecIdxs[-2]+1].flatten()] = Ltot*My.T.flatten()\n",
+    "\n",
+    "#applying weight\n",
+    "weight = p3g.weight(M, n*G0, N, pf3.DOF, gcl.Direction3D(0,0,-1))\n",
+    "f+=weight"
    ]
   },
   {
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "460f4828",
    "metadata": {},
    "outputs": [],
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "05c2f92f",
    "metadata": {},
    "outputs": [],
@@ -251,19 +255,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a3933456",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0625805466d4485d9502dad1ae43d6bf",
+       "model_id": "ff153b0e46e44c30a768610a6531c62e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7d58e4fb0_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:61249/index.html?ui=P_0x242fb1fa330_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -327,19 +331,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6aacba99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bb590fb690849468593db7e560003c2",
+       "model_id": "7a1378a2e2414b5c9fd6471ec5f4d73e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7af386b70_1&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:61249/index.html?ui=P_0x242fb71af90_2&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -410,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "3c3e56bf",
    "metadata": {},
    "outputs": [],
@@ -423,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "fc0ff625",
    "metadata": {},
    "outputs": [],
@@ -434,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c6a47caa",
    "metadata": {},
    "outputs": [],
@@ -445,12 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ca68a38d",
    "metadata": {},
    "outputs": [],
    "source": [
     "#boundary conditions = fix at y of fuselage boundary\n",
+    "n=1.5\n",
     "bk = np.zeros(N, dtype=bool)\n",
     "check = np.isclose(y, up.ffb.y)\n",
     "for i in range(pf3.DOF):\n",
@@ -466,16 +471,19 @@
     "\n",
     "f = np.zeros(N)\n",
     "Ltot = n*G0*MTOM\n",
-    "L, Mx, My = lm.apply_on_wingbox(xmesh.T, ymesh.T, (0,1), (0,1))\n",
+    "L, Mx, My = lm.apply_on_wingbox(xmesh.T, ymesh.T, (up.fft.y/FULLSPAN, up.tft.y/FULLSPAN), (up.xcft, up.xcrt))\n",
     "f[2::pf3.DOF][topskids.flatten()] = Ltot*L.T.flatten()\n",
     "f[3::pf3.DOF][topskids.flatten()] = Ltot*Mx.T.flatten()\n",
     "f[4::pf3.DOF][topskids.flatten()] = Ltot*My.T.flatten()\n",
-    "n=1.5"
+    "\n",
+    "#applying weight\n",
+    "weight = p3g.weight(M, n*G0, N, pf3.DOF, gcl.Direction3D(0,0,-1))\n",
+    "f+=weight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "4b46cea5",
    "metadata": {},
    "outputs": [],
@@ -501,19 +509,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "500f305a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0712a09c51fa48dcaa727be5b79c4ce9",
+       "model_id": "9138c8d7f1bb4444a8250ec11a4971ab",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7a43b9940_2&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:61249/index.html?ui=P_0x2430a964cb0_3&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -569,19 +577,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b56ac0b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3ee54a49a4741c6be5370fa6f73c7eb",
+       "model_id": "6d0efcd6f35f4f0eb57306431f76a140",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7bafb29c0_3&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:61249/index.html?ui=P_0x242fb3954c0_4&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#nodes is our ncoords\n",
+    "elements = outdict[\"elements\"]\n",
+    "nid_pos = outdict[\"nid_pos\"]\n",
+    "nodex = x+v\n",
+    "nodey = y+u[1::pf3.DOF]\n",
+    "nodez = z+w\n",
+    "nodes = list(zip(nodex, nodey, nodez))\n",
+    "miny, maxy = 0,20\n",
+    "\n",
+    "'''handling each element separately at each elemnt type gets a diff colour'''\n",
+    "#springs\n",
+    "edges_s = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
+    "        edges_s.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_s = [7]*len(edges_s)\n",
+    "#beams\n",
+    "edges_b = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
+    "        edges_b.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_b = [5]*len(edges_s)\n",
+    "#quads\n",
+    "edges_q = list()\n",
+    "for s in elements[\"quad\"]:\n",
+    "    if y[nid_pos[s.n1]]>miny and y[nid_pos[s.n1]]<maxy:\n",
+    "        edges_q.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "        edges_q.append([nid_pos[s.n2], nid_pos[s.n3]])\n",
+    "        edges_q.append([nid_pos[s.n3], nid_pos[s.n4]])\n",
+    "        edges_q.append([nid_pos[s.n4], nid_pos[s.n1]])\n",
+    "colors_q = [0]*len(edges_q)\n",
+    "\n",
+    "edges = np.array(edges_s+edges_b+edges_q)\n",
+    "colors = np.array(colors_s+colors_b+colors_q)\n",
+    "\n",
+    "# We must \"pad\" the edges to indicate to vtk how many points per edge\n",
+    "padding = np.empty(edges.shape[0], int) * 2\n",
+    "padding[:] = 2\n",
+    "edges_w_padding = np.vstack((padding, edges.T)).T\n",
+    "\n",
+    "mesh_ = pyvista.PolyData(nodes, edges_w_padding)\n",
+    "\n",
+    "mesh_.plot(\n",
+    "    scalars=colors,\n",
+    "    render_lines_as_tubes=True,\n",
+    "    style='wireframe',\n",
+    "    line_width=1,\n",
+    "    cmap='jet',\n",
+    "    show_scalar_bar=False,\n",
+    "    background='w',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7387ccf",
+   "metadata": {},
+   "source": [
+    "# Ok, it seems fine, at this point idk. Let's add stuff like batteries, might help to see what goes wrong"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5a50a921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beamids, batids = [[]]*(2*ntrig+1), [[]]*(2*ntrig+1)\n",
+    "for i, ids in zip(range(1,2*ntrig+1,2), sbci[1:-1]): #bottom batteries\n",
+    "    beamids[i], batids[i] = mc.bat_rail(mesh, ntrig, a1, a2, f2, din, dz, ids, \n",
+    "                                        batteryRail, battery, mount, mount, BAT_MASS_1WING)\n",
+    "for i, ids in zip(range(0,2*ntrig+1,2), stci): #top batteries\n",
+    "    beamids[i], batids[i] = mc.bat_rail(mesh, ntrig, a1, a2, f2, din, -dz, ids, \n",
+    "                                        batteryRail, battery, mount, mount, BAT_MASS_1WING)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "eb46f935",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mm\n"
+     ]
+    }
+   ],
+   "source": [
+    "ks_motmount =  p3g.SpringProp(INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF, INFTY_STIFF) #TODO: here orientation will be \"fun\"\n",
+    "\n",
+    "#3) beams\n",
+    "prop_rail = p3g.OrientedBeamProp(1, 0, 0)\n",
+    "prop_rail.A = np.pi/4*din**2\n",
+    "prop_rail.Iyy = np.pi/64*din**4\n",
+    "prop_rail.Izz = prop_rail.Iyy\n",
+    "prop_rail.J = prop_rail.Iyy+prop_rail.Izz\n",
+    "scf = 5/6 #ASSUMPTION, TODO: verify\n",
+    "prop_rail.G = scf*E_STEEL/2/(1+0.3)\n",
+    "prop_rail.intrho = RHO_STEEL*prop_rail.A\n",
+    "prop_rail.intrhoy2 = RHO_STEEL*prop_rail.Izz\n",
+    "prop_rail.intrhoz2 = RHO_STEEL*prop_rail.Iyy\n",
+    "\n",
+    "#template for the flange prop\n",
+    "prop_flange = p3g.OrientedBeamProp(0, 0, 0)\n",
+    "prop_flange.A = t_rib*ribflange\n",
+    "prop_flange.Izz = t_rib*ribflange**3/12\n",
+    "prop_flange.Iyy = ribflange*t_rib**3/12\n",
+    "scf = 5/6 #ASSUMPTION, TODO: verify\n",
+    "prop_flange.G = scf*E/2/(1+0.3)\n",
+    "prop_flange.intrho = RHO*prop_flange.A\n",
+    "prop_flange.intrhoy2 = RHO*prop_flange.Izz\n",
+    "prop_flange.intrhoz2 = RHO*prop_flange.Iyy\n",
+    "\n",
+    "def prop_flange_or(dir): #oriented flange prop\n",
+    "    pfor = copy.deepcopy(prop_flange)\n",
+    "    pfor.xyex = dir[0]\n",
+    "    pfor.xyey = dir[1]\n",
+    "    pfor.xyez = dir[2]\n",
+    "    return pfor\n",
+    "\n",
+    "#element dictionary\n",
+    "eleProps = {\"quad\":{spar:psp.isotropic_plate(thickness=t_spar, E=E, nu=NU, rho=RHO, calc_scf=True), \n",
+    "                    skin:psp.isotropic_plate(thickness=t_skin, E=E, nu=NU, rho=RHO, calc_scf=True),\n",
+    "                    panelPlate:psp.isotropic_plate(thickness=t_plate, E=E, nu=NU, rho=RHO, calc_scf=True), \n",
+    "                    panelRib:psp.isotropic_plate(thickness=t_rib, E=E, nu=NU, rho=RHO, calc_scf=True)},\n",
+    "            \"spring\":{mount:ks_motmount},\n",
+    "            \"beam\":{batteryRail:prop_rail, panelFlange:prop_flange_or}, \n",
+    "            \"mass\":{battery:lambda m:m, motor:motormass, lg:lgmass, hinge:hingemass}}\n",
+    "print(mount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e2a6def5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exporting mesh to pyfe3d\n",
+    "KC0, M, N, x, y, z, outdict = p3g.eles_from_gcl(mesh, eleProps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5392c7",
+   "metadata": {},
+   "source": [
+    "Now, we apply both weight and lift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6bd2eb7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n=1.5\n",
+    "#boundary conditions = fix at y of fuselage boundary\n",
+    "bk = np.zeros(N, dtype=bool)\n",
+    "check = np.isclose(y, up.ffb.y)\n",
+    "for i in range(pf3.DOF):\n",
+    "    bk[i::pf3.DOF] = check\n",
+    "bu = ~bk\n",
+    "\n",
+    "xmesh = np.zeros(topsksh.shape)\n",
+    "ymesh = np.zeros(topsksh.shape)\n",
+    "for i in range(topsksh.shape[0]):\n",
+    "    for j in range(topsksh.shape[1]):\n",
+    "        xmesh[i,j]=topsksh[i,j].x\n",
+    "        ymesh[i,j]=topsksh[i,j].y\n",
+    "\n",
+    "f = np.zeros(N)\n",
+    "Ltot = n*G0*MTOM\n",
+    "L, Mx, My = lm.apply_on_wingbox(xmesh.T, ymesh.T, (up.fft.y/FULLSPAN, up.tft.y/FULLSPAN), (up.xcft, up.xcrt))\n",
+    "f[2::pf3.DOF][topskids.flatten()] = Ltot*L.T.flatten()\n",
+    "f[3::pf3.DOF][topskids.flatten()] = Ltot*Mx.T.flatten()\n",
+    "f[4::pf3.DOF][topskids.flatten()] = Ltot*My.T.flatten()\n",
+    "\n",
+    "#applying weight\n",
+    "weight = p3g.weight(M, n*G0, N, pf3.DOF, gcl.Direction3D(0,0,-1))\n",
+    "f+=weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "486cd3d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#checks and solution\n",
+    "KC0uu = KC0[bu, :][:, bu]\n",
+    "fu = f[bu]\n",
+    "uu = ssl.spsolve(KC0uu, fu)\n",
+    "u = np.zeros(N)\n",
+    "u[bu] = uu\n",
+    "\n",
+    "w = u[2::pf3.DOF]\n",
+    "v = u[0::pf3.DOF]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb044fa1",
+   "metadata": {},
+   "source": [
+    "## Pyvista n.o 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0c6b00b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7038def08f984f88bff76c2bcfd11832",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7a781ade0_8&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pyvista as pv\n",
+    "#nodes is our ncoords\n",
+    "elements = outdict[\"elements\"]\n",
+    "nid_pos = outdict[\"nid_pos\"]\n",
+    "\n",
+    "'''handling each element separately at each elemnt type gets a diff colour'''\n",
+    "#springs\n",
+    "edges_s = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    edges_s.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_s = [1]*len(edges_s)\n",
+    "#beams\n",
+    "edges_b = list()\n",
+    "for s in elements[\"spring\"]:\n",
+    "    edges_b.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "colors_b = [2]*len(edges_s)\n",
+    "#quads\n",
+    "edges_q = list()\n",
+    "for s in elements[\"quad\"]:\n",
+    "    edges_q.append([nid_pos[s.n1], nid_pos[s.n2]])\n",
+    "    edges_q.append([nid_pos[s.n2], nid_pos[s.n3]])\n",
+    "    edges_q.append([nid_pos[s.n3], nid_pos[s.n4]])\n",
+    "    edges_q.append([nid_pos[s.n4], nid_pos[s.n1]])\n",
+    "colors_q = [3]*len(edges_q)\n",
+    "\n",
+    "edges = np.array(edges_s+edges_b+edges_q)\n",
+    "colors = np.array(colors_s+colors_b+colors_q)\n",
+    "\n",
+    "# We must \"pad\" the edges to indicate to vtk how many points per edge\n",
+    "padding = np.empty(edges.shape[0], int) * 2\n",
+    "padding[:] = 2\n",
+    "edges_w_padding = np.vstack((padding, edges.T)).T\n",
+    "\n",
+    "mesh_ = pyvista.PolyData(outdict[\"ncoords\"], edges_w_padding)\n",
+    "\n",
+    "mesh_.plot(\n",
+    "    scalars=colors,\n",
+    "    render_lines_as_tubes=True,\n",
+    "    style='wireframe',\n",
+    "    line_width=1,\n",
+    "    cmap='jet',\n",
+    "    show_scalar_bar=False,\n",
+    "    background='w',\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "f0b548e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e88ec180a5a54b29a9eb2b9e9837ede3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7a46b4470_9&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
