--- a/C3/main.ipynb
+++ b/C3/main.ipynb
@@ -764,19 +764,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "d4b5b748",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e052900fa2343c09199f6ad33a9d9be",
+       "model_id": "70f0138e1354466195e6da7b82628383",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:52116/index.html?ui=P_0x13cbe059370_21&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:52116/index.html?ui=P_0x13cd0c57d10_24&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
@@ -844,19 +844,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "3d10aa74",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a7a34c46b104e8d9be2f91d8d52d273",
+       "model_id": "75dbdefd9bf2428ba8fd9872942535cb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:52116/index.html?ui=P_0x13cbe058d40_22&reconnect=auto\" class=\"pyvi…"
+       "Widget(value='<iframe src=\"http://localhost:52116/index.html?ui=P_0x13cbe0584a0_23&reconnect=auto\" class=\"pyvi…"
       ]
      },
      "metadata": {},
