--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c28c8f87",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
     "mesh = gcl.Mesh3D()\n",
     "\n",
     "#mesh settings\n",
-    "nbCoeff = 1.2\n",
+    "nbCoeff = 1\n",
     "na = 7\n",
     "nf2 = 3\n",
     "ntrig = 2\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "05c2f92f",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "3c3e56bf",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "fc0ff625",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "eb46f935",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
+   "id": "317f6cc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "botflsh, botsksh, botflids, botskids = mc.panel(mesh, up.ffb, up.frb, up.tfb, up.trb, nb, nip, nf2, \n",
+    "                                    panelPlate, skin, panelRib, panelFlange, up.surfb, sbci, cspacing, bspacing)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35cd0f99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mids = mc.motors(mesh, up.motors, topflsh, topflids, botflsh, botflids, motor, mount)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d4dc7cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgid = mc.lg(mesh, up.lg, botflsh, botflids, lg, mount)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4becfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hingeid = mc.hinge(mesh, up.hinge, topflsh, topflids, hinge, mount)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "135f04cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "leids, teids = mc.LETE(mesh, up.leline, up.teline, topflsh, topflids, botflsh, botflids, lemass, temass, battery, mount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "e2a6def5",
    "metadata": {},
    "outputs": [],
@@ -753,12 +805,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "6bd2eb7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n=1.5\n",
+    "n=2.5\n",
     "#boundary conditions = fix at y of fuselage boundary\n",
     "bk = np.zeros(N, dtype=bool)\n",
     "check = np.isclose(y, up.ffb.y)\n",
@@ -780,6 +832,19 @@
     "f[3::pf3.DOF][topskids.flatten()] = Ltot*Mx.T.flatten()\n",
     "f[4::pf3.DOF][topskids.flatten()] = Ltot*My.T.flatten()\n",
     "\n",
+    "xmesh = np.zeros(botsksh.shape)\n",
+    "ymesh = np.zeros(botsksh.shape)\n",
+    "for i in range(botsksh.shape[0]):\n",
+    "    for j in range(botsksh.shape[1]):\n",
+    "        xmesh[i,j]=botsksh[i,j].x\n",
+    "        ymesh[i,j]=botsksh[i,j].y\n",
+    "\n",
+    "Ltot = n*G0*MTOM\n",
+    "L, Mx, My = lm.apply_on_wingbox(xmesh.T, ymesh.T, (up.ffb.y/FULLSPAN, up.tfb.y/FULLSPAN), (up.xcfb, up.xcrb), False)\n",
+    "f[2::pf3.DOF][botskids.flatten()] = Ltot*L.T.flatten()\n",
+    "f[3::pf3.DOF][botskids.flatten()] = Ltot*Mx.T.flatten()\n",
+    "f[4::pf3.DOF][botskids.flatten()] = Ltot*My.T.flatten()\n",
+    "\n",
     "#applying weight\n",
     "weight = p3g.weight(M, n*G0, N, pf3.DOF, gcl.Direction3D(0,0,-1))\n",
     "f+=weight"
@@ -787,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "486cd3d0",
    "metadata": {},
    "outputs": [],
@@ -813,19 +878,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "0c6b00b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7038def08f984f88bff76c2bcfd11832",
+       "model_id": "e8a6b72c116246d595b70867500ec6dd",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7a781ade0_8&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50297/index.html?ui=P_0x23c2e8279e0_0&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -881,19 +946,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "f0b548e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e88ec180a5a54b29a9eb2b9e9837ede3",
+       "model_id": "3a14aaf051ff48a981307f43c483e123",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:54314/index.html?ui=P_0x1c7a46b4470_9&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50297/index.html?ui=P_0x23c2fff6a50_1&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
