--- a/C3/comp_by_comp.ipynb
+++ b/C3/comp_by_comp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "27e1a559",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c28c8f87",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "05c2f92f",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "fc0ff625",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "eb46f935",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "317f6cc7",
    "metadata": {},
    "outputs": [],
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "35cd0f99",
    "metadata": {},
    "outputs": [],
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1d4dc7cb",
    "metadata": {},
    "outputs": [],
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2f4becfd",
    "metadata": {},
    "outputs": [],
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "135f04cd",
    "metadata": {},
    "outputs": [],
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "e2a6def5",
    "metadata": {},
    "outputs": [],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "486cd3d0",
    "metadata": {},
    "outputs": [],
@@ -878,19 +878,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "0c6b00b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8a6b72c116246d595b70867500ec6dd",
+       "model_id": "910e1e8467ca492688a96adb134a70fb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50297/index.html?ui=P_0x23c2e8279e0_0&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252ac589430_2&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
@@ -946,19 +946,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "f0b548e6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a14aaf051ff48a981307f43c483e123",
+       "model_id": "18126501d1e44585b411b96f8253e17a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:50297/index.html?ui=P_0x23c2fff6a50_1&reconnect=auto\" class=\"pyvis…"
+       "Widget(value='<iframe src=\"http://localhost:50815/index.html?ui=P_0x252abd35640_3&reconnect=auto\" class=\"pyvis…"
       ]
      },
      "metadata": {},
